<resources>
    <string name="app_name">InBici</string>
    <string name="app_failure_init">Failed to initialize InBici application</string>
    <string name="track_info">Info</string>
    <string name="track_trainings">Allenamento</string>
    <string name="new_field_type_label">Che tipo di info vuoi aggiungere?</string>
    <string name="addnewinfo">Aggiungi nuove informazioni</string>
    <string name="insert_info">Inserisci informazioni</string>
    <string name="action_training_start">Inizia allenamento!</string>
    <string name="action_training_pause">Pausa</string>
    <string name="action_training_resume">Contunia allenamento</string>
    <string name="action_training_stop">Finisci allenamento</string>
    <string name="duration_format_full">%1$sh e %2$s\'</string>
    <string name="duration_format_short">%s\'</string>
    <string name="length_format">%skm</string>
    <string name="altitude_format">%sm</string>
    <string name="track_name">Nome della ciclabile</string>
    <string name="description">Descrizione</string>
    <string name="average_travel_time">Tempo stimato di percorrenza</string>
    <string name="track_lenght_descriptive">Lunghezza</string>
    <string name="wind">Vento</string>
    <string name="altitude_gap">Dislivello in salita</string>
    <string name="type_of_surface">Tipo di fondo</string>
    <string name="crossing_with_other_paths">Innesto con altre piste</string>
    <string name="advised_season">Stagione consigliata</string>
    <string name="traffic">Traffico</string>
    <string name="number_of_registered_uses"> Numero di utilizzi registrati</string>
    <string name="last_training_date">Data ultimo allenamento</string>
    <string name="elapsed_time">Tempo medio percorso</string>
    <string name="traveled_distance">Distanza media tracciata (km)</string>
    <string name="avg_speed">Velocità media (km/h)</string>
    <string name="max_speed">Velocità massima (km/h)</string>
    <string name="total_elevation">Dislivello totale (metri)</string>
    <string name="event_category">Evento %1$s, promosso da %2$s</string>
    <string name="modify_contacts_txt">Modifica Contatti</string>
    <string name="phone">Telefono</string>
    <string name="email">Email</string>
    <string name="website">Sito Web</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="date_place_name">data e luogo</string>
    <string name="place_name">Luogo</string>
    <string name="street">Via</string>
    <string name="city">Citta</string>
    <string name="address">Indirizzo</string>
    <string name="date">Data</string>
    <string name="date_with_time">%1$s, ore %2$s</string>
    <string name="start_date">Data di inizio</string>
    <string name="end_date">Data di fine</string>
    <string name="start_time">Ora di Inizio</string>
    <string name="end_time">Ora di Fine</string>
    <string name="duration">Durata</string>
    <string name="event_desc">Descrizione</string>
    <string name="modify_desc_txt">Modifica Descrizione</string>
    <string name="modify_tag_txt">Modifica Tag</string>
    <string name="tag">tag</string>
    <string name="nav_drawer_map">Mappa</string>
    <string name="action_poi">POIs</string>
    <string name="action_list">Lista</string>
    <string name="empty" />
    <string name="event_create_success">Event successfully created!</string>
    <string name="update_success">Your updates have been saved.</string>
    <string name="categories_track_pedestrian">Piste ciclopedonali</string>
    <string name="categories_track_trekking">Passeggiate</string>
    <string name="categories_track_bicycle">Pista ciclabile</string>
    <string name="categories_event_today">Today\'s Events</string>
    <string name="categories_event_my">My Events</string>
    <string name="search_txt">Search</string>
    <string name="comments">View reviews</string>
    <string name="source_smartcampus">SmartCampus</string>
    <string name="submenu_related_events">Related events</string>
    <string name="search_in_category">in category</string>
    <string name="search_today_events">Search today\'s events</string>
    <string name="eventlist_at_place">Events at</string>
    <string name="toast_poi_not_found">Place not found</string>
    <string name="warning_for_direction">Warning! The directions will lead you to the seat of the organization and not to the venue.</string>
    <string name="list_event_today">Today</string>
    <string name="list_event_tomorrow">Tomorrow</string>
    <string name="content_empty">No results.</string>
    <string name="app_failure_security">Failed to retrieve authentication data</string>
    <string name="app_failure_operation">OOPS! An error occurred. Please check your connection or try again later</string>
    <string name="initial_data_load">Loading initial data&#8230; (it may take a while this time)</string>
    <string name="backstring">Indietro</string>
    <string name="showdetails">Dettagli&#8230;</string>
    <string name="info_dialog_title_poi">Informazioni luogo</string>
    <string name="info_dialog_title_event">Informazioni evento</string>
    <string name="info_dialog_title_track">Informazioni tracciato</string>
    <string name="app_failure_obj_not_found">Oggetto non trovato!</string>
    <string name="search_what">What: </string>
    <string name="search_when">When: </string>
    <string name="search_where">Where: </string>
    <string name="search_anytime">Anytime</string>
    <string name="search_today">Today</string>
    <string name="search_tomorrow">Tomorrow</string>
    <string name="search_thisweek">This week</string>
    <string name="search_intwoweeks">In two weeks</string>
    <string name="search_inonemonth">In one month</string>
    <string name="search_anywhere">Anywhere</string>
    <string name="search_within">Within %s</string>
    <string name="dialog_connection_search">Offline mode supports only basic search. To exploit advanced search please connect to a network.</string>
    <string name="search_for">Search for</string>
    <string name="auth_failed">Application initialization failed.</string>
    <string name="map_view">View on map</string>
    <string name="mapmenu_events"> Eventi</string>
    <string name="mapmenu_freetime"> Tempo libero e vacanze</string>
    <string name="mapmenu_places"> Posti certificati</string>
    <string name="mapmenu_babies"> Neonati</string>
    <string name="ratingtext_average">Average rating:</string>
    <string name="ratingtext_user">Your rating: %s</string>
    <string name="ratingtext_raters">Total rates: %s</string>
    <string name="rating_place_dialog_title">Rate this place:</string>
    <string name="rating_event_dialog_title">Rate this event:</string>
    <string name="comment_event_dialog_title">Comment this event:</string>
    <string name="rating_success">Your rating has been saved</string>
    <string name="comment_success">Your comment has been saved</string>
    <string name="rate_button">Rate it!</string>
    <string name="hotel_level">Family level: %s</string>
    <string name="hotel_cat">Category: %s stars</string>
    <string name="event_subcat">Category: %s</string>
    <string name="event_price">Price: %s </string>
    <string name="event_price_free">Price: free</string>
    <string name="audit_person_date">Qualification achievement date: %s</string>
    <string name="auth_required">Please sign in with your Google account. </string>
    <string name="comment_hint">Comment</string>
    <string name="filter_dialog_title">Mostra eventi selezionati</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="label_attending">Attending</string>
    <string name="label_comments">Comments</string>
    <string name="community_attendees">Attendees</string>
    <string name="community_attending">Attending</string>
    <string name="label_rating">Rating</string>
    <string name="community_my_rate">My rate</string>
    <string name="community_avg_rate">Average rate</string>
    <string name="community_tot_rate">Total rate</string>
    <string name="attend_success">Added to your attending list!</string>
    <string name="not_attend_success">Removed from your attending list!</string>
    <string name="_toknow_place_type">Place type</string>
    <string name="_toknow_access">Access</string>
    <string name="_toknow_chance">Happening chance</string>
    <string name="_toknow_language_main">Main language</string>
    <string name="_toknow_clothing">Suggested clothing</string>
    <string name="_toknow_to_bring">To bring</string>
    <string name="toknow_button_add">Add more info</string>
    <string name="toknow_label_new">Add "to know"</string>
    <string name="toknow_label_edit">Edit "to know"</string>
    <string name="toknow_label_title">Title</string>
    <string name="toknow_label_content">Content</string>
    <string name="toknow_toast_title_empty">The title is empty</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_oscar_test">OscarTestActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="address_select_toast">Select an address</string>
    <string name="toast_time_wrong">Event\'s time is wrong</string>
    <string name="when_where">When and where</string>
    <string name="logcontrol_start">Start tracking</string>
    <string name="logcontrol_pause">Pause tracking</string>
    <string name="logcontrol_resume">Resume tracking</string>
    <string name="logcontrol_stop">Stop tracking</string>
    <string name="dialog_tracking_title">Tracking control</string>
    <string name="btn_okay">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_skip">Skip</string>
    <string name="dialog_routename_title">Name track</string>
    <string name="dialog_routename_message">Please enter the name of the track</string>
    <string name="dialog_routename_default">Track %1$tY-%2$tm-%3$td %4$tH:%5$tM</string>
    <string name="customupload_failed">The last upload of track progress failed</string>
    <string name="voiceover_speaking">In the last %1$d minutes covered a distance of %2$d meter</string>
    <string name="service_gpsstatus">Logging: %1$s (%2$s with %3$d satellites)</string>
    <string name="service_gpsnostatus">Logging: %1$s (Precision %2$s)</string>
    <string name="service_networkstatus">Logging: %1$s (%2$s with cell tower and wifi)</string>
    <string name="service_gpsdisabled">GPS is disabled, logging is without effect.</string>
    <string name="service_gpsenabled">GPS is enabled, commencing logging.</string>
    <string name="service_connectiondisabled">Network is disabled, network location logging is without effect.</string>
    <string name="service_datadisabled">Network positioning is disabled, logging is without effect.</string>
    <string name="number_of_trainings_track">How many times I trained myself</string>
    <string name="average_distance_track">Average distance (Km)</string>
    <string name="speed_track">Speed (Km/h)</string>
    <string name="average_speed_track">Average</string>
    <string name="maximum_speed_track">Maximum</string>
    <string name="average_time_track">Average time (h)</string>
    <string name="average_difference_track">Average difference (m)</string>
    <string name="last_training_day_track">Last training day</string>
    <string name="statistics_track">Statistics</string>
    <string name="order_alpha">alphabetical</string>
    <string name="order_distance">distance</string>
    <string name="order_length">length</string>
    <string name="order_altitude_gap">altitude gap</string>
    <string name="order_avg_time">Average time</string>
</resources>