<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|left"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/order_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/order_alpha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_alpha" />

        <RadioButton
            android:id="@+id/order_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_distance" />

        <RadioButton
            android:id="@+id/order_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_length" />

        <RadioButton
            android:id="@+id/order_altitude_gap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_altitude_gap" />

        <RadioButton
            android:id="@+id/order_avg_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_avg_time" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/save_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@android:string/ok" />

        <Button
            android:id="@+id/save_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@android:string/cancel"/>
    </LinearLayout>

</LinearLayout>