 <menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:eu.iescities.pilot.rovereto.inbici="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/map_view"
        android:icon="@drawable/ic_action_map"
        android:title="@string/action_poi"
        android:orderInCategory="3"
        eu.iescities.pilot.rovereto.inbici:showAsAction="always">
    </item>
     
    <item
        android:id="@+id/direction_action"
        android:icon="@drawable/ic_action_directions"
        android:title="@string/search_txt"
        android:orderInCategory="2"
        eu.iescities.pilot.rovereto.inbici:showAsAction="always">
    </item>
    <item
        android:id="@+id/start_training"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/action_training_start"
        android:orderInCategory="1"
        eu.iescities.pilot.rovereto.inbici:showAsAction="always">
    </item>
</menu>