<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/choice_buttons"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_contacts_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/jungle_green"
                android:gravity="center_vertical"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="4dp"
                android:textColor="@color/sc_light_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" >

                <TextView
                    android:id="@+id/phone_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/phone"
                    android:textColor="@color/jungle_green"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="0"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/phone_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:digits="0123456789+"
                        android:inputType="phone" />

                    <ImageView
                        android:id="@+id/add_phone_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_action_new_phone" />
                </LinearLayout>

                <eu.iescities.pilot.rovereto.inbici.entities.event.edit.EditedFieldListView
                    android:id="@+id/phone_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0px"
                    android:scrollbars="none" />

                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/email"
                    android:textColor="@color/jungle_green"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="0"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/email_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:inputType="textEmailAddress" />

                    <ImageView
                        android:id="@+id/add_email_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_action_new_email" />
                </LinearLayout>

                <eu.iescities.pilot.rovereto.inbici.entities.event.edit.EditedFieldListView
                    android:id="@+id/email_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0px"
                    android:scrollbars="none" />

                <TextView
                    android:id="@+id/website_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/website"
                    android:textColor="@color/jungle_green"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/website_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_url"
                    android:inputType="textMultiLine" >
                </EditText>

                <TextView
                    android:id="@+id/facebook_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/facebook"
                    android:textColor="@color/jungle_green"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/facebook_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_url"
                    android:inputType="textMultiLine" >
                </EditText>

                <TextView
                    android:id="@+id/twitter_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/twitter"
                    android:textColor="@color/jungle_green"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/twitter_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_url"
                    android:inputType="textMultiLine" >
                </EditText>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/choice_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/edit_contacts_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/edit_contacts_modify_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modify" />
    </LinearLayout>

</RelativeLayout>